2007-05-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryService.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/TargetFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/PagesResourceImpl.java: 
	* projects/core/editor2/txt/pages/main_pages.xml: 
	Fixed editor problems that occured when a page was not listed in navigation or
	a page was listed in navigation but no target existed.

2007-04-23  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/BuildTimePropTask.java (execute): 
	Make ant properties available using "__antprop_" prefix.

2007-04-19  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/xsl/forminput.xsl: Suppress "type" attribute on "form" element
	* projects/core/xsl/master.xsl: 
	Add "type" attribute for "script" element in <pfx:script> template
	* projects/core/xsl/utils.xsl: 
	Fixed javascript code for editor console to make it work in IE (version 6)

2007-04-13  Martin Leidig  <mleidig@schlund.de>

	Made newproject.sh working again by updating the general configuration.

	* skel/projects/common/conf/pustefix.xml

2007-04-12  Martin Leidig  <mleidig@schlund.de>

	Added JSON serialization tests for Lists and Maps, e.g. unparameterized
	Lists and Maps, which can be serialized, but not deserialized due to
	missing type information.

	* tests/junit/de/schlund/pfixcore/webservice/jsonws/JSONSerializerTest.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/ReadOnlyBean.java
	* tests/junit/de/schlund/pfixcore/webservice/jsonws/TestBean.java

2007-04-11  Martin Leidig  <mleidig@schlund.de>

	Added JSON (de-)serialization support for generic Lists and Maps. Because of
	the restrictions of the JSON format, especially the absence of type information,